# pieceful

./: .gitignore  README.md  example.py  example_lazy.py  example_protocol.py  foo.py  pyproject.toml
.github/: README.md
pieceful/: __init__.py  _components.py  _components_lazy.py  _swallower.py  _types.py  core.py  entity.py  entry.py  enums.py  exc.py  exceptions.py  facade.py  generic_utils.py  parameter_parser.py  readme.md  registry.py  typing_utils.py
tests/: abstraction.py  models.py  setup.py  test_.py  test_auto_name.py  test_generic_utils.py  test_main.py  test_typing_utils.py
