[tool.poetry]
name = "pieceful"
version = "0.1.0"
description = "Python package to solve dependency injection"
authors = ["Josef Cernik"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
